--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -1,3 +1,18 @@
 * {
   box-sizing: border-box;
 }
+
+.wrapper {
+  height: 100vh;
+  display: flex;
+}
+
+.Side-bar {
+  width: 300px;
+  background-color: #253141;
+}
+
+.Chat-main {
+  width: calc(100% - 300px);
+  background-color: #fff;
+}
