--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,1 +1,7 @@
 .Chat-main
+  .Chat-main__group-info
+    メインヘッダー
+  .Chat-main__massage-list
+    メインメッセージ
+  .Chat-main__massage-form
+    メインフッター
