--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -9,4 +9,9 @@
         = link_to "#", class: "Side-bar__top-items--cog" do
           = icon('fas', 'cog')
   .Side-bar__group-list
-    サイドグループリスト
+    .Group
+      = link_to '#' do
+        .Group__name
+          tachcamp
+        .Group__message
+          まだメッセージがありません
