added group-name/member and group-edit-btn into main-heder

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -64,6 +64,34 @@
     height: 100px;
     background-color: #fff;
     border-bottom: 1px solid #eee;
+    padding: 0 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    a {
+      text-decoration: none;
+    }
+    .Group-info {
+      &__name {
+        font-size: 20px;
+        color: #333;
+        margin-top: 35px;
+        margin-bottom: 15px;
+      }
+      &__member-list {
+        font-size: 12px;
+        color: #999;
+      }
+      &__editBtn {
+        font-size: 16px;
+        color: #38aef0;
+        border: 1px solid #38aef0;
+        padding: 0px 20px;
+        height: 40px;
+        width: 72px;
+        line-height: 40px;
+      }
+    }
   }
   &__massage-list {
     height: calc(100vh - 190px);
