--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,7 +1,13 @@
 .Chat-main
   .Chat-main__group-info
-    メインヘッダー
   .Chat-main__massage-list
     メインメッセージ
   .Chat-main__massage-form
+    .Group-info
+      .Group-info__name
+        test
+      .Group-info__member-list
+        Member: masa
+    = link_to '#',class: "Group-info__editBtn" do
+      Edit
     メインフッター
