--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -93,12 +93,73 @@
       }
     }
   }
-  &__massage-list {
+  &__message-list {
     height: calc(100vh - 190px);
     background-color: #fafafa;
+    padding: 35px 40px 0;
+    .Message-box {
+      margin-bottom: 46px;
+      .Message-info {
+        margin-bottom: 12px;
+        display: flex;
+        align-items: center;
+        &__user-name {
+          font-weight: bold;
+          font-size: 16px;
+          color: #333;
+          padding-right: 12px;
+        }
+        &__date-time {
+          font-size: 12px;
+          color: #999;
+        }
+      }
+      .Message {
+        font-size: 12px;
+        color: #434a54;
+      }
+    }
   }
-  &__massage-form {
+  &__message-form {
     height: 90px;
     background-color: #d2d2d2;
+    padding: 20px 40px 20px 50px;
+    .New-message {
+      display: flex;
+      justify-content: space-between;
+      .Input-box {
+        width: 100%;
+        background-color: #fff;
+        display: flex;
+        position: relative;
+        &__context {
+          width: 100%;
+          height: 50px;
+          padding: 0 40px 0 10px;
+          border-style: none;
+        }
+        &__image {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          cursor: pointer;
+          font-size: 21px;
+          &--file {
+            display: none;
+          }
+        }
+      }
+      &__send-btn {
+        width: 100px;
+        height: 50px;
+        padding: 0 30px;
+        margin-left: 15px;
+        background-color: #38aef0;
+        color: #fff;
+        cursor: pointer;
+        font-size: 15px;
+        border-style: none;
+      }
+    }
   }
 }
