--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,8 +1,5 @@
 .Chat-main
   .Chat-main__group-info
-  .Chat-main__massage-list
-    メインメッセージ
-  .Chat-main__massage-form
     .Group-info
       .Group-info__name
         test
@@ -10,4 +7,28 @@
         Member: masa
     = link_to '#',class: "Group-info__editBtn" do
       Edit
-    メインフッター
+  .Chat-main__message-list
+    .Message-box
+      .Message-info
+        .Message-info__user-name
+          masa
+        .Message-info__date-time
+          2020/6/23
+      .Message
+        おはよう！
+    .Message-box
+      .Message-info
+        .Message-info__user-name
+          masa
+        .Message-info__date-time
+          2020/6/23
+      .Message
+        おはよう！
+  .Chat-main__message-form
+    %form.New-message
+      .Input-box
+        %input{type: "text", class: "Input-box__context", placeholder: "type a message"}
+        %label{class: "Input-box__image"}
+          = icon('fas', 'image')
+          %input{type: "file", class: "Input-box__image--file"}
+      %input{type: "submit", class: "New-message__send-btn", value: "Send"}
