--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -6,7 +6,7 @@
       .Side-bar__top-items--icon
         = link_to "#", class: "Side-bar__top-items--edit" do
           = icon('far', 'edit')
-        = link_to "#", class: "Side-bar__top-items--cog" do
+        = link_to edit_user_path(current_user), class: "Side-bar__top-items--cog" do
           = icon('fas', 'cog')
   .Side-bar__group-list
     .Group
