--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import "modules/messages";
 @import "modules/user";
+@import "modules/flash";
 @import "font-awesome-sprockets";
 @import "font-awesome";
