--- a/app/assets/stylesheets/modules/_user.scss
+++ b/app/assets/stylesheets/modules/_user.scss
@@ -17,6 +17,7 @@
     margin-bottom: 10px;
     letter-spacing: 3px;
     font-size: 40px;
+    color: red;
     &:after {
       content: "";
       display: block;
