Added the function to register and edit groups

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "modules/messages";
 @import "modules/user";
 @import "modules/flash";
+@import "modules/group";
 @import "font-awesome-sprockets";
 @import "font-awesome";
