--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -25,10 +25,10 @@
       .Message
         おはよう！
   .Chat-main__message-form
-    %form.New-message
+    = form_with model: [@group, @message], html: {class: "New-message"}, local: true do |f|
       .Input-box
-        %input{type: "text", class: "Input-box__context", placeholder: "type a message"}
-        %label{class: "Input-box__image"}
-          = icon('fas', 'image')
-          %input{type: "file", class: "Input-box__image--file"}
-      %input{type: "submit", class: "New-message__send-btn", value: "Send"}
+        = f.text_field :content, class: 'Input-box__context', placeholder: 'type a message'
+        = f.label :image, class: 'Input-box__image' do
+          = icon('far', 'image', class: 'Input-box__image--icon')
+          = f.file_field :image, class: 'Input-box__image--file'
+      = f.submit 'Send', class: 'New-message__send-btn'
