--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -11,19 +11,14 @@
     .Message-box
       .Message-info
         .Message-info__user-name
-          masa
+          = message.user.name
         .Message-info__date-time
-          2020/6/23
+          = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
       .Message
-        おはよう！
-    .Message-box
-      .Message-info
-        .Message-info__user-name
-          masa
-        .Message-info__date-time
-          2020/6/23
-      .Message
-        おはよう！
+        - if message.content.present?
+          %p.Message__content
+            = message.content
+        = image_tag message.image.url, class: 'Message__image' if message.image.present?
   .Chat-main__message-form
     = form_with model: [@group, @message], html: {class: "New-message"}, local: true do |f|
       .Input-box
