--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,23 +2,15 @@
   .Chat-main__group-info
     .Group-info
       .Group-info__name
-        test
+        = @group.name
       .Group-info__member-list
-        Member: masa
-    = link_to '#',class: "Group-info__editBtn" do
+        - @group.users.each do |user|
+          -# = binding.pry
+          = "Member : #{user.name}"
+    = link_to edit_group_path(@group),class: "Group-info__editBtn" do
       Edit
   .Chat-main__message-list
-    .Message-box
-      .Message-info
-        .Message-info__user-name
-          = message.user.name
-        .Message-info__date-time
-          = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-      .Message
-        - if message.content.present?
-          %p.Message__content
-            = message.content
-        = image_tag message.image.url, class: 'Message__image' if message.image.present?
+    = render @messages
   .Chat-main__message-form
     = form_with model: [@group, @message], html: {class: "New-message"}, local: true do |f|
       .Input-box
