--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -4,9 +4,9 @@
       .Group-info__name
         = @group.name
       .Group-info__member-list
+        Member :
         - @group.users.each do |user|
-          -# = binding.pry
-          = "Member : #{user.name}"
+          = user.name
     = link_to edit_group_path(@group),class: "Group-info__editBtn" do
       Edit
   .Chat-main__message-list
