--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,8 +1,8 @@
-.MessageBox
-  .MessageInfo
-    .MessageInfo__userName
+.Message-box
+  .Message-info
+    .Message-info__user-name
       = message.user.name
-    .MessageInfo__date
+    .Message-info__date-time
       = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
   .Message
     - if message.content.present?
