--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -97,6 +97,7 @@
     height: calc(100vh - 190px);
     background-color: #fafafa;
     padding: 35px 40px 0;
+    overflow: scroll;
     .Message-box {
       margin-bottom: 46px;
       .Message-info {
