--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,7 +3,7 @@
     .Message-info__user-name
       = message.user.name
     .Message-info__date-time
-      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+      = message.created_at.to_s(:datetime)
   .Message
     - if message.content.present?
       %p.Message__content
