--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -25,8 +25,6 @@
     height: 20px;
     display: flex;
     justify-content: space-between;
-    &--name {
-    }
     &--icon {
       display: flex;
       a {
@@ -41,6 +39,7 @@
     padding: 0 20px;
     height: calc(100vh - 100px);
     background-color: #2f3e51;
+    overflow: scroll;
     .Group{
       padding: 20px 0 40px 0;
       a {
